Home page: spacing fixed for  left panel, tab panel css moved to style page.

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
@@ -1,93 +1,1 @@
-﻿.tab-content-panel {
-    width: 55%;
-    float: left;
-    margin-left: -7px;
-}
-
-.questions-container {
-    margin-bottom: 0;
-    padding-bottom: 15px;
-    border-top: 1px solid #eeeeee;
-}
-
-.questions-container:hover {
-    background-color: #f5f5f5;
-}
-
-.social-icon > h5 {
-    display: inline;
-}
-
-.details-container {
-    margin-left: 10px;
-}
-
-/* Deprecated now
-    .arrow_box {
-    position: relative;
-    background: #88b7d5;
-}
-
-.arrow_box:after {
-    bottom: 100%;
-    left: 50%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-color: rgba(136, 183, 213, 0);
-    border-bottom-color: #88b7d5;
-    border-width: 30px;
-    margin-left: -30px;
-}*/
-
-.left-footer {
-    float: left;
-    padding-top: 2px;
-    padding-bottom: 14px;
-}
-
-.right-footer {
-    float: right;
-    padding-top: 2px;
-    padding-bottom: 14px;
-}
-
-.left-gap {
-    border: 1px solid transparent;
-}
-
-.subtitle {
-    font-style: italic;
-}
-
-.details-container > h5 {
-    font-size: 15px;
-    font-family: myriadpro-regular;
-    display: inline-block;
-}
-h2 {
-    font-size: 24px;
-    font-family: myriadpro-regular;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-h5 {
-    display: inline;
-}
-
-p {
-    font-size: 17px;
-    font-family: myriadpro-regular;
-    margin: 0;
-    overflow: hidden;
-    color: #7b7474;
-}
-
-.article-footer {
-    border-bottom: 1px solid #d2cece;
-    padding: 0 15px;
-}
+﻿
